# imp

./: .gitignore  Cargo.toml  Makefile  README.md  TESTING.md  TEST_RESULTS.md  build.rs  flake.nix  imp.toml  nixos-test.nix  package.json  supervisor-permission-fix-prompt.md
.github/: AUTO_FIX.md
.github/workflows/: auto-fix.yml  ci.yml  nixos-test.yml  patch-release.yml  release.yml
hooks/: README.md  install.sh  pre-commit
src/: config.rs  generation.rs  main.rs  symlink.rs
tests/: integration_tests.rs
