[package]
name = "imp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
dirs = "5.0"

[[bin]]
name = "imp"
path = "src/main.rs"
