[package]
name = "imp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
dirs = "5.0"
nix = { version = "0.29", features = ["mount", "user", "fs"] }
caps = "0.5"

[dev-dependencies]
testcontainers = { version = "0.23", features = ["blocking"] }
bollard = "0.18"

[[bin]]
name = "imp"
path = "src/main.rs"
